feat: sftp entry details
